--- a/templates/view_profile.html
+++ b/templates/view_profile.html
@@ -74,7 +74,7 @@
                     <img class="me-4" src="images/notif_header.png" />
                 </div>
                 <div class="col-2 border-start text-end">
-                    <span class="me-5" id="mnsubhead">{{ store_owner_information["name"] }}</span>
+                    <span class="me-5" id="mnsubhead"><a style="text-decoration:none;color:black;" href="/userprofile">{{ store_owner_information["name"] }}</a></span>
                 </div>
             </div>
             <!-- first box -->
