--- a/templates/create_project.html
+++ b/templates/create_project.html
@@ -37,7 +37,7 @@
                             <img class="icon_sb" src="images/manage_projects_sidebar_active.png" />
                             <span>Manage Projects</span>
                         </a>
-                        <a class="ps-4 p-3 pt-4" id="link_sb" href="#">
+                        <a class="ps-4 p-3 pt-4" id="link_sb" href="/userprofile">
                             <img class="icon_sb" src="images/profile_sidebar.png" />
                             <span>View Profile</span>
                         </a>
@@ -67,7 +67,7 @@
                     <img class="me-4" src="images/notif_header.png" />
                 </div>
                 <div class="col-2 border-start text-end">
-                    <span class="me-5" id="mnsubhead">{{ fullname }}</span>
+                    <span class="me-5" id="mnsubhead"><a style="text-decoration:none;color:black;" href="/userprofile">{{ fullname }}</a></span>
                 </div>
             </div>
             <div class="row pt-4">
