Updates to store owner faqs

--- a/templates/manage_subscription.html
+++ b/templates/manage_subscription.html
@@ -29,11 +29,11 @@
                         </div>
                     </div>
                     <div class="ms-sm-0 row">
-                        <a class="ps-4 p-3 pb-4" id="link_sb" href="#">
+                        <a class="ps-4 p-3 pb-4" id="link_sb" href="/projectoverview">
                             <img class="icon_sb" src="images/overview_sidebar.png" />
                             <span>Overview</span>
                         </a>
-                        <a class="ps-4 p-3" id="link_sb" href="#">
+                        <a class="ps-4 p-3" id="link_sb" href="/manageprojects">
                             <img class="icon_sb" src="images/manage_projects_sidebar.png" />
                             <span>Manage Projects</span>
                         </a>
@@ -45,11 +45,11 @@
                             <img class="icon_sb" src="images/problem_reporting_sidebar.png" />
                             <span>Problem Reporting</span>
                         </a>
-                        <a class="ps-4 p-3 pt-4" id="link_sb" href="#">
+                        <a class="ps-4 p-3 pt-4" id="link_sb" href="/projectfaqs">
                             <img class="icon_sb" src="images/faq_sidebar.png" />
                             <span>FAQ</span>
                         </a>
-                        <a class="ps-4 p-3 pt-4" id="link_sb" href="#">
+                        <a class="ps-4 p-3 pt-4" id="link_sb" href="/logout">
                             <img class="icon_sb" src="images/logout_sidebar.png" />
                             <span>Log out</span>
                         </a>
