--- a/templates/view_profile.html
+++ b/templates/view_profile.html
@@ -51,11 +51,11 @@
                             <img class="icon_sb" src="images/problem_reporting_sidebar.png" />
                             <span>Problem Reporting</span>
                         </a>
-                        <a class="ps-4 p-3 pt-4" id="link_sb" href="#">
+                        <a class="ps-4 p-3 pt-4" id="link_sb" href="/projectfaqs">
                             <img class="icon_sb" src="images/faq_sidebar.png" />
                             <span>FAQ</span>
                         </a>
-                        <a class="ps-4 p-3 pt-4" id="link_sb" href="#">
+                        <a class="ps-4 p-3 pt-4" id="link_sb" href="/logout">
                             <img class="icon_sb" src="images/logout_sidebar.png" />
                             <span>Log out</span>
                         </a>
