--- a/templates/test_item_rating.html
+++ b/templates/test_item_rating.html
@@ -7,14 +7,14 @@
     <meta name="keywords" content="" />
     <meta name="description" content="" />
     <meta name="author" content="" />
-    <link rel="shortcut icon" href="images/favicon.png" type="">
+    <link rel="shortcut icon" href="{{ 	url_for('static', filename='images/favicon.png')	}}" type="">
     <title>Test Item Rating</title>
     <link href="https://fonts.googleapis.com/css?family=Inter&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Mulish&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="{{ 	url_for('static', filename='css/styles.css')	}}">
 </head>
 
 <body style="background: #F7F8FC;">
@@ -24,33 +24,33 @@
                 <div class="sidebar" style="position: fixed;">
                     <div class="ms-sm-0 row">
                         <div class="ms-4 pt-2 pb-5 logo-content">
-                            <img src="images/logo.png" />
+                            <img src="{{ 	url_for('static', filename='images/logo.png')	}}" />
                             <span class="sbheadline">Store Owner</span>
                         </div>
                     </div>
                     <div class="ms-sm-0 row">
                         <a class="ps-4 p-3 pb-4" id="link_sb" href="/projectoverview">
-                            <img class="icon_sb" src="images/overview_sidebar.png" />
+                            <img class="icon_sb" src="{{ 	url_for('static', filename='images/overview_sidebar.png')	}}" />
                             <span>Overview</span>
                         </a>
                         <a class="active ps-4 p-3 border-start border-3" id="link_sb" href="#">
-                            <img class="icon_sb" src="images/manage_projects_sidebar_active.png" />
+                            <img class="icon_sb" src="{{ 	url_for('static', filename='images/manage_projects_sidebar_active.png')	}}" />
                             <span>Manage Projects</span>
                         </a>
                         <a class="ps-4 p-3 pt-4" id="link_sb" href="/userprofile">
-                            <img class="icon_sb" src="images/profile_sidebar.png" />
+                            <img class="icon_sb" src="{{ 	url_for('static', filename='images/profile_sidebar.png')	}}" />
                             <span>View Profile</span>
                         </a>
                         <a class="ps-4 p-3 pt-4" id="link_sb" href="#">
-                            <img class="icon_sb" src="images/problem_reporting_sidebar.png" />
+                            <img class="icon_sb" src="{{ 	url_for('static', filename='images/problem_reporting_sidebar.png')	}}" />
                             <span>Problem Reporting</span>
                         </a>
                         <a class="ps-4 p-3 pt-4" id="link_sb" href="#">
-                            <img class="icon_sb" src="images/faq_sidebar.png" />
+                            <img class="icon_sb" src="{{ 	url_for('static', filename='images/faq_sidebar.png')	}}" />
                             <span>FAQ</span>
                         </a>
-                        <a class="ps-4 p-3 pt-4" id="link_sb" href="#">
-                            <img class="icon_sb" src="images/logout_sidebar.png" />
+                        <a class="ps-4 p-3 pt-4" id="link_sb" href="/logout">
+                            <img class="icon_sb" src="{{ 	url_for('static', filename='images/logout_sidebar.png')	}}" />
                             <span>Log out</span>
                         </a>
                     </div>
@@ -61,13 +61,13 @@
             <!-- overview header -->
             <div class="row pb-1">
                 <div class="col-8">
-                    <span id="mnheadline">Project 1</span>
+                    <span id="mnheadline">Project {{ project_information["id"] }}</span>
                 </div>
                 <div class="col-2 text-end">
-                    <img class="me-4" src="images/notif_header.png" />
+                    <img class="me-4" src="{{ 	url_for('static', filename='images/notif_header.png')	}}" />
                 </div>
                 <div class="col-2 border-start text-end">
-                    <span class="me-5" id="mnsubhead"><a style="text-decoration:none;color:black;" href="/userprofile">{{ store_owner_information["name"] }}</a></span>
+                    <span class="me-5" id="mnsubhead"><a style="text-decoration:none;color:black;" href="/userprofile">{{ fullname }}</a></span>
                 </div>
             </div>
             <div class="row pt-3 pb-2">
@@ -121,7 +121,7 @@
                     </div>
                     <!-- second row -->
                     <div class="row">
-                        <span class="ms-3 pb-2" id="subhead">Type of Project: Shoes</span>
+                        <span class="ms-3 pb-2" id="subhead">Type of Project: {{ project_information["category"] }}</span>
                     </div>
                     <!-- third row -->
                     <div class="row pt-3 pb-3">
@@ -141,7 +141,7 @@
                     <!-- fourth row -->
                     <div class="row pt-3">
                         <div class="col-4 pb-3 border-bottom">
-                            <img class="ms-3" src="images/shoe3.png">
+                            <img class="ms-3" src="{{ 	url_for('static', filename='images/shoe3.png')	}}">
                             <span class="ms-4" id="content">Shoe 4</span>
                         </div>
                         <div class="col-3 border-bottom">
