--- a/templates/forgot_password.html
+++ b/templates/forgot_password.html
@@ -15,17 +15,6 @@
             <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
             <link rel="stylesheet" href="css/login.css">
             
-
-<script>
-function showPassword() {
-  var x = document.getElementById("passwordInput");
-  if (x.type === "password") {
-    x.type = "text";
-  } else {
-    x.type = "password";
-  }
-}
-</script>
           </head>
           
           <body>
@@ -46,31 +35,20 @@ function showPassword() {
                   </div>
                   <div class="row" style="height:40px;">
                     <div style="height: 50%;">
-                    <p class="text-center text-1">Login</p>
-                    <p class="text-center text-2">Enter your email and password below</p>
+                    <p class="text-center text-1">Reset Password</p>
+                    <p class="text-center text-2">Enter your email to reset your password</p>
                     </div>
                   </div>
                   <div class="row">
-					<form method="POST" action="/login">
+					<form method="POST" action="/forgotpassword">
 					
                       <p class="input-field-tag">EMAIL</p>
                       <input class="input-field" type="email" name="username" placeholder="Email Address" required></input>
-                      <div class="row">
-                        <div class="col"><p class="input-field-tag">PASSWORD</p></div>
-                        <div class="col"><a class="input-field-tag" id="forgot-password" href="/forgotpassword">Forgot password?</a></div>
-                      </div>
-                      <input class="input-field" id="passwordInput" type="password" name="password" placeholder="Password" required>
-                        <div style="position: relative;"><img class="toggle-icon" src="images/passwordtoggle.png" onmousedown="showPassword()" onmouseup="showPassword()"></img></div>
-                      </input>
                       <div class="row justify-content-center" style="height: 30%;">
-                        <button class="btn-primary" id="loginBtn">Log In</button>
+                        <button class="btn-primary" id="loginBtn">Reset Password</button>
                       </div>
                     </form>
                   </div>
-                  <div class="row align-items-center">
-                    <p class="text-center input-field-tag text-3" style=>Don't have an account? <a id="signupLink" href="/register">Sign up</a>&emsp;<a id="signupLink" href="/">Go Back</a></p>
-                  </div>
-                  
                 </div>
             </div>
           </body>
