--- a/templates/forgot_password.html
+++ b/templates/forgot_password.html
@@ -43,7 +43,7 @@
 					<form method="POST" action="/forgotpassword">
 					
                       <p class="input-field-tag">EMAIL</p>
-                      <input class="input-field" type="email" name="username" placeholder="Email Address" required></input>
+                      <input class="input-field" type="email" name="email" placeholder="Email Address" required></input>
                       <div class="row justify-content-center" style="height: 30%;">
                         <button class="btn-primary" id="loginBtn">Reset Password</button>
                       </div>
