--- a/templates/manage_subscription.html
+++ b/templates/manage_subscription.html
@@ -16,7 +16,21 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="css/styles.css">
 </head>
+<script>
+function if_checked()
+{
+	var renew = document.getElementById("renewBtn");
+	if (renew.checked)
+	{
+		renew.checked = false;
+	}
+	else
+	{
+		renew.checked = true;
+	}
+}
 
+</script>
 <body style="background: #F7F8FC;">
     <div class="row">
         <div class="col col-2">
@@ -131,18 +145,82 @@
                         </div>
                     </div>
                     <!-- seventh row -->
-                    <div class="row pt-3 pb-5">
+                    <div class="row pt-1 pb-3">
                         <div class="col border-bottom">
                             <span class="ms-3 pb-3" id="content">Subscription Start Date:</span>
                             <!-- content -->
-                            <span class="pb-3" id="content">2 August 2022</span>
+                            <span class="pb-3" id="content">{{ subscription_information["startdate"] }}</span>
                         </div>
                         <div class="col border-bottom">
                             <span class="pb-3" id="content">Subscription End Date:</span>
                             <!-- content -->
-                            <span class="pb-3" id="content">20 September 2022</span>
+                            <span class="pb-3" id="content">{{ subscription_information["expirydate"] }}</span>
                         </div>
                 </div>
+				<form method="POST" action="/autorenew">
+				{% if subscription_information["renew"] %}
+				<div class="row pt-1 pb-3">
+                        <div class="col border-bottom">
+                            <span class="ms-3 pb-3" id="content">Auto Renew :</span>
+                            <!-- content -->
+                            <label class="switch">
+							  <input type="checkbox" checked="checked" id="renewBtn" data-bs-toggle="modal" data-bs-target="#exampleModal1">
+							  <span class="slider round"></span>
+							</label>
+                        </div>
+                </div>
+								<!-- Button trigger modal -->
+<!-- Modal -->
+<div class="modal fade" id="exampleModal1" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h1 class="modal-title fs-5" id="exampleModalLabel">Modal title</h1>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close" onclick="if_checked()"></button>
+      </div>
+      <div class="modal-body">
+        Do you want to stop auto renewing for subscription?
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal" onclick="if_checked()">Close</button>
+        <button type="submit" class="btn btn-primary" name="renew" value="false">Stop Renewing</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+{% else %}
+
+<div class="row pt-1 pb-3">
+                        <div class="col border-bottom">
+                            <span class="ms-3 pb-3" id="content">Auto Renew :</span>
+                            <!-- content -->
+                            <label class="switch">
+							  <input type="checkbox" id="renewBtn" name="renew" data-bs-toggle="modal" data-bs-target="#exampleModal2">
+							  <span class="slider round"></span>
+							</label>
+                        </div>
+                </div>
+<div class="modal fade" id="exampleModal2" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h1 class="modal-title fs-5" id="exampleModalLabel">Modal title</h1>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close" onclick="if_checked()"></button>
+      </div>
+      <div class="modal-body">
+        Do you want to start auto renewing for subscription?
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal" onclick="if_checked()">Close</button>
+        <button type="submit" class="btn btn-primary" name="renew" value="true">Start Renewing</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+{% endif %}
+</form>
             </div>
         </div>
     </div>
