--- a/templates/manage_project.html
+++ b/templates/manage_project.html
@@ -41,7 +41,7 @@
                             <img class="icon_sb" src="images/profile_sidebar.png" />
                             <span>View Profile</span>
                         </a>
-                        <a class="ps-4 p-3 pt-4" id="link_sb" href="#">
+                        <a class="ps-4 p-3 pt-4" id="link_sb" href="/problemreporting">
                             <img class="icon_sb" src="images/problem_reporting_sidebar.png" />
                             <span>Problem Reporting</span>
                         </a>
