--- a/templates/test_item_rating.html
+++ b/templates/test_item_rating.html
@@ -41,11 +41,11 @@
                             <img class="icon_sb" src="{{ 	url_for('static', filename='images/profile_sidebar.png')	}}" />
                             <span>View Profile</span>
                         </a>
-                        <a class="ps-4 p-3 pt-4" id="link_sb" href="#">
+                        <a class="ps-4 p-3 pt-4" id="link_sb" href="/problemreporting">
                             <img class="icon_sb" src="{{ 	url_for('static', filename='images/problem_reporting_sidebar.png')	}}" />
                             <span>Problem Reporting</span>
                         </a>
-                        <a class="ps-4 p-3 pt-4" id="link_sb" href="#">
+                        <a class="ps-4 p-3 pt-4" id="link_sb" href="/projectfaqs">
                             <img class="icon_sb" src="{{ 	url_for('static', filename='images/faq_sidebar.png')	}}" />
                             <span>FAQ</span>
                         </a>
