--- a/templates/view_profile.html
+++ b/templates/view_profile.html
@@ -47,7 +47,7 @@
                             <img class="icon_sb" src="images/profile_sidebar_active.png" />
                             <span>View Profile</span>
                         </a>
-                        <a class="ps-4 p-3 pt-4" id="link_sb" href="#">
+                        <a class="ps-4 p-3 pt-4" id="link_sb" href="/problemreporting">
                             <img class="icon_sb" src="images/problem_reporting_sidebar.png" />
                             <span>Problem Reporting</span>
                         </a>
