test item rating

--- a/templates/create_project.html
+++ b/templates/create_project.html
@@ -89,17 +89,17 @@
                         <!-- second row -->
                         <div class="row">
                             <span class="ms-3 pb-2" id="inputhead">Project Name</span>
-                            <input class="ms-4 cpinput-l" type="text" placeholder="Name" name="pname">
+                            <input class="ms-4 cpinput-l" type="text" placeholder="Name" name="pname" required>
                         </div>
                         <!-- third row -->
                         <div class="row pt-3 pb-3">
                             <div class="col">
                                 <span class="ms-3 pb-2" id="inputhead" >Category</span>
-                                <input class="ms-sm-3 ps-2 cpinput-s" type="text" placeholder="Category" name="category">
+                                <input class="ms-sm-3 ps-2 cpinput-s" type="text" placeholder="Category" name="category" required>
                             </div>
                             <div class="col">
                                 <span class="pb-2" id="inputhead">Website URL</span>
-                                <input class="ps-2 cpinput-s" type="text" placeholder="URL" name="url">
+                                <input class="ps-2 cpinput-s" type="text" placeholder="URL" name="url" required>
                             </div>
                         </div>
                         <!-- fourth row -->
