--- a/templates/manage_store_owners_administrator.html
+++ b/templates/manage_store_owners_administrator.html
@@ -108,6 +108,17 @@
 						<!-- fourth row -->
                         <div class="row pt-3 pb-3">
                             <div class="col">
+                                <span class="ms-3 pb-2" id="inputhead" >CONTACT NUMBER</span>
+                                <input class="ms-sm-3 ps-2 cpinput-s" type="text" placeholder="Contact Number +(country code)(number)" name="cname" required>
+                            </div>
+                            <div class="col">
+                                <span class="pb-2" id="inputhead">STORE URL</span>
+                                <input class="ps-2 cpinput-s" type="text" placeholder="Industry e.g Shoes, Watch, Clothes, etc." name="industry" required>
+                            </div>
+                        </div>
+						<!-- fourth row -->
+                        <div class="row pt-3 pb-3">
+                            <div class="col">
                                 <span class="ms-3 pb-2" id="inputhead" >COMPANY</span>
                                 <input class="ms-sm-3 ps-2 cpinput-s" type="text" placeholder="Company name" name="cname" required>
                             </div>
@@ -173,7 +184,7 @@
 									<div class="row pt-3 pb-3 esobox align-items-center">
 										<!--col 1-->
 										<div class="col-3">
-										<span class="name ms-1 pb-2"><img id="profile-picture" src="images/profile_pic.png"/>Tom Cruise</span>
+										<img id="profile-picture" src="images/profile_pic.png"/><span class="name ms-1 pb-2"></span>
 										</div>
 										<!--col 2-->
 										<div class="col-2">
@@ -213,6 +224,27 @@
             {
                 name: "Tom Cruise",
                 company: "Curicó",
+                status: "images/active.png", 
+                freezebutton: "Freeze",
+				deletebutton: "Delete"
+            },
+            {
+                name: "Theodore Duran",
+                company: "Dhanbad",
+                status: "images/active.png", 
+                freezebutton: "Freeze",
+				deletebutton: "Delete"
+            },
+            {
+                name: "Kylie Bishop",
+                company: "Norman",
+                status: "images/active.png", 
+                freezebutton: "Freeze",
+				deletebutton: "Delete"
+            },
+            {
+                name: "Willow Gilliam",
+                company: "Amqui",
                 status: "images/active.png", 
                 freezebutton: "Freeze",
 				deletebutton: "Delete"
