--- a/templates/register.html
+++ b/templates/register.html
@@ -87,7 +87,7 @@ var check = function() {
                         <p class="input-field-tag">LAST NAME</p>
                         <input class="input-field  name-field" type="text" name="lname" placeholder="Last name" required maxlength="32"></input></div>
                       </div>
-					  <p class="input-field-tag">Contact Number</p>
+					  <p class="input-field-tag">CONTACT NUMBER</p>
                       <input class="input-field" type="tel" name="contact" placeholder="Contact Number +(country code)(number)" required maxlength="15" pattern="[+]{1}[0-9]{10,14}"></input>
 					  <div class="row">
                         <div class="col">
